feature: added parking, leaving and status feature